Didn't catch all the for-loop formatting last time, corrections in here.
Some more variables were made final here, though some will wait to see how the testing of updated code goes.